--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ body {
 
 .caixaDireita {
     width: 1000px;
-    height: 700px;
+    height: 600px;
     background-color: #584634;
     box-shadow: 0px 4px 4px #00000040;
     /* serve para colocar sombra na caixa aqui */
@@ -192,7 +192,7 @@ body {
 
 .caixaDireita p {
     color: #ffffff;
-    font-size: 18px;
+    font-size: 15px;
     letter-spacing: 0.5px;
     font-family: 'Montserrat';
     line-height: 25.8px;
@@ -237,4 +237,10 @@ body {
 
 .pngTrio {
     height: 700px;
+}
+
+.conteudo2 {
+    color: #ffffff;
+    
+    
 }
