--- a/style.css
+++ b/style.css
@@ -326,7 +326,13 @@ body {
     border-radius: 50%;
 }
 
-.personagens {
+.flexbox {
     display: flex;
     align-items: center;
+    justify-content: center;
+    
+}
+
+.tamanhoPers {
+    margin: 10px;
 }
