--- a/style.css
+++ b/style.css
@@ -23,6 +23,11 @@
     src: url(fontes/Monda-Bold.ttf);
 }
 
+@font-face {
+    font-family: 'Poppins';
+    src: url(fontes/Poppins-Light.ttf);
+}
+
 body {
     margin: 0;
     background-color: #9E8466;
@@ -152,12 +157,12 @@ body {
 .ondaPagina {
     display: flex;
     justify-content: center;
-   
+
 }
 
 .ondaMarrom {
-height: 100%;
-width: 100%;
+    height: 100%;
+    width: 100%;
 }
 
 
@@ -187,8 +192,81 @@ width: 100%;
     box-shadow: 0px 4px 4px #00000040;
     /* serve para colocar sombra na caixa aqui */
     margin: 0px 0px 0px 30px;
+}
+
+.caixaDireita2 {
+    width: 920px;
+    height: 700px;
+    background-color: #584634;
+    box-shadow: 0px 4px 4px #00000040;
+    /* serve para colocar sombra na caixa aqui */
+    margin: 0px 0px 0px 30px;
+    background-color: #4F453F;
+
+}
+
+.caixaDireita2 p {
+    color: #ffffff;
+    font-size: 15px;
+    letter-spacing: 0.5px;
+    font-family: 'Montserrat';
+    line-height: 25.8px;
+    text-align: center;
+    margin: 20px 40px 50px 40px;
+    font-weight: 400;
+}
+
+.flexbox1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row-reverse;
+
+}
+
+.caixaTitulo {
+    background-color: #211914;
+    width: 922px;
+    height: 55px;
+
+}
+
+.TituloSessaoPersonagem {
+    font-size: 38px;
+    margin: 0;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    background-color: #211914;
+    font-family: 'BonaNova';
+    font-weight: 400;
+    height: 55px;
+}
+
+.TituloSessaoPersEsq {
+
+    font-weight: 400;
+    font-family: 'Montserrat';
+    color: white;
+    background-color: #211914;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 55px;
+    font-size: 23px;
+
+}
 
 
+
+.caixaTitulo p {
+    color: white;
+    text-align: center;
+    font-size: 30px;
+    margin-top: 20px;
+    font-family: 'Bona Nova';
 }
 
 .caixaDireita h2 {
@@ -213,6 +291,7 @@ width: 100%;
 }
 
 
+
 .caixaEsquerda {
     background-color: #584634;
     width: 450px;
@@ -220,6 +299,46 @@ width: 100%;
     box-shadow: 0px 4px 4px #00000040;
     align-self: stretch;
 
+}
+
+.caixaCitacao {
+    border-radius: 20px;
+    border: 3px solid #818181;
+    background: rgba(255, 255, 255, 0.00);
+    height: 180px;
+    width: 615px;
+    margin: 25px 60px 10px 155px;
+
+}
+
+.caixaEsquerda2 {
+    background-color: #3D332D;
+    width: 500px;
+    height: 700px;
+    box-shadow: 0px 4px 4px #00000040;
+    align-self: stretch;
+
+}
+
+.imagemDoPersonagem {
+    margin: 0;
+}
+
+.imgSessaoPersonagem {
+    width: 500px;
+    height: 400px;
+    display: block;
+}
+
+
+
+p {
+    color: #FFFFFF;
+    font-family: 'Montserrat';
+    font-weight: 400;
+    font-size: 25px;
+    text-align: center;
+    margin: 0;
 }
 
 .caixaEsquerda p {
@@ -284,7 +403,7 @@ width: 100%;
 .conteudo2 .sessaoEspecies1 .especie a {
     text-decoration: none;
     color: #ffffff;
-}  
+}
 
 .subtituloSessao {
     color: white;
@@ -308,19 +427,18 @@ width: 100%;
 
 .conteudo2 .sessaoEspecies2 .especie p {
     margin: 5px;
-    }
+}
 
 .conteudo2 .sessaoEspecies2 .especie a {
     text-decoration: none;
     color: #ffffff;
-}  
+}
 
 .quadradoEspecie {
     width: 350px;
     height: 250px;
     border-radius: 20px;
     display: flex;
-
 }
 
 .especie {
@@ -338,6 +456,7 @@ width: 100%;
 
 .conteudo3 {
     background-color: #342B25;
+    height: 1300px;
 }
 
 
@@ -345,13 +464,48 @@ width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    
-    
+
 }
+
 
 .tamanhoPers {
     margin: 10px;
     border-radius: 50%;
     height: 150px;
     width: 150px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+}
+
+.conteudo4 {
+    background-color: #B19877;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 700px;
+
+}
+
+.conteudo4 video {
+    width: 800px;
+    height: 500px;
+    margin: 0px 0px 70px 0px
+}
+
+.conteudo5 {
+    background-color: #6A594A;
+}  
+ 
+
+.footer {
+    background-color: #241B11;
+    padding: 10px;
+    height: 80px;
+}
+
+.footer p {
+    font-family: 'Poppins';
+    text-align: center;
+    margin: 20px;
+    font-size: 20px;
 }
