--- a/style.css
+++ b/style.css
@@ -313,7 +313,7 @@ body {
 
 .caixaEsquerda2 {
     background-color: #3D332D;
-    width: 500px;
+    width: 550px;
     height: 700px;
     box-shadow: 0px 4px 4px #00000040;
     align-self: stretch;
@@ -325,7 +325,7 @@ body {
 }
 
 .imgSessaoPersonagem {
-    width: 500px;
+    width: 550px;
     height: 400px;
     display: block;
 }
@@ -476,15 +476,24 @@ p {
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
 
+.info {
+    display: flex;
+    justify-content: space-between; /* Alinha a esquerda à esquerda e a direita à direita */
+    margin-bottom: 0;
+    width: 100%; /* Faz com que as divs ocupem toda a largura da coluna */
+}
+
 .coluna {
-    width: 300px;
+    width: 100%;
     background-color: #3D332D;  
+    box-sizing: border-box;
+   
 }
 
 .linhas {
     display: flex;
     align-items: center;
-    margin-bottom: 10px;
+    justify-content: space-between;
 }
 
 .esquerda {
@@ -496,9 +505,12 @@ p {
     font-weight: 600;
     line-height: 128.9%; 
     letter-spacing: 0.45px;
-    width: 190px;
+    width: 50%;
+    padding: 20px;
+    margin: 0;
 
 }
+
 
 .direita {
     color: #EFEFEF;
@@ -508,13 +520,19 @@ p {
     font-weight: 600;
     line-height: 128.9%; 
     letter-spacing: 0.45px;
-    width: 190px;
+    width: 90%;    
+    margin-left: 24px;
+    display: flex;
+    align-items: center;
+    
+
 }
 
 .divisor {
     height: 2px;
     background-color: black;
-    margin: 10px 0;
+    margin: 0;
+    width: 100%;
 }
 
 .conteudo4 {
