--- a/Login/style.css
+++ b/Login/style.css
@@ -1,7 +1,14 @@
 * {
 	color: white;
+	font-family: "Montserrat";
 }
 
+.navbar {
+	display: flex;
+	flex-direction: row-reverse;
+	margin-top: 30px;
+	margin-right: 100px;
+}
 body {
 	background-image: url(QuartoElena.jpg);
 	background-size: cover;
@@ -27,6 +34,7 @@ h1 {
 	font-weight: 700;
 	line-height: normal;
 	text-align: center;
+	margin: 5px
 }
 
 h2 {
@@ -54,17 +62,15 @@ h3 {
 	font-style: normal;
 	font-weight: 400;
 	line-height: normal;
-	background-color: transparent;
+	background-color: #B6A281;
 	border: none;
 	outline: none;
-	border-bottom: 1px solid rgb(200, 200, 200);
 	padding-bottom: 1px;
-
 	width: 30%;
-}
+	width: 408px;
+	height: 55px;
+	border-radius: 20px;
 
-.camposDeEntrada::placeholder {
-	color: rgb(200, 200, 200);
 }
 
 h4 {
@@ -88,7 +94,7 @@ h5 {
 }
 
 #botao_logar {
-	font-family: "Montserrat";
+	/* font-family: "Montserrat";
 	font-size: 15px;
 	font-style: normal;
 	font-weight: 600;
@@ -98,22 +104,30 @@ h5 {
 	padding: 14px 184px;
 	justify-content: center;
 	gap: 10px;
-	background: #730217;
-	box-shadow: 2px 6px 15px 0px rgba(0, 0, 0, 0.25);
+	background: #552424;
+	box-shadow: 2px 6px 15px rgba(0, 0, 0, 0.25);	 */
+	background-color: #552424;
+	border: none;
+	color: white;
+	padding: 15px 100px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	border-radius: 8px;
 
 }
 
 #botao_logar:hover {
-	background-color: #552424;
+	background-color: #673232;
+	transition-duration: 1s;
 	cursor: pointer;
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
-#botao_logar:active {
-	background-color: #683232;
-}
 
 a {
-	color: #bf9460;
+	color: #d5aa75;
 	text-decoration: none;
 	font-family: "Montserrat";
 	font-size: 16px;
@@ -123,5 +137,5 @@ a {
 }
 
 a:hover {
-	color: rgb(178, 115, 38);
+	color: rgb(238, 170, 87);
 }
