primeiras estilizações e ajustes da pagina de especies

--- a/pagina1/style.css
+++ b/pagina1/style.css
@@ -2,6 +2,7 @@
     font-family: 'BonaNova';
     src: url(fontes/BonaNova-Regular.ttf);
 }
+
 @font-face {
     font-family: 'Montserrat';
     src: url(fontes/Montserrat-VariableFont_wght.ttf);
@@ -9,7 +10,7 @@
 
 * {
     font-size: 'Montserrat';
-    color: black; 
+    color: black;
 }
 
 body {
@@ -80,19 +81,56 @@ body {
 
 .caixaCitacao {
     border-radius: 20px;
-    border: 3px solid #818181;
+    border: 3px solid #211914;
     background: rgba(255, 255, 255, 0.00);
-    height: 180px;
+    height: 125px;
     width: 615px;
-    margin: 25px 60px 10px 155px;
+    margin: 31px 53px 10px 140px;    
+    text-align: center;
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 128.9%;   
+    letter-spacing: 0.5px;
+    padding: 20px;
 
 }
 
+.caixaCitacao .citacaoAutor {
+    margin-left: 123px ;
+    padding: 0;
+    font-family: 12px;
+}
+
+.descricaoEspecie {
+    text-align: center;
+    margin-top: 20px;
+}
 .unicaSessao h1 {
     font-family: 'BonaNova';
     color: white;
+    margin-left: 30px;
+    margin-bottom: 0px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-transform: uppercase;
+
 }
 
+.unicaSessao h3 {
+    font-family: 'BonaNova';
+    color: white;
+    margin-left: 35px;
+    margin-top: 0px;
+    margin-bottom: 22px;
+    padding: 0px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 128.9%;
+    /* 30.936px */
+    letter-spacing: 0.6px;
+}
 
 .primeiraCaixa {
     width: 1100px;
@@ -101,6 +139,21 @@ body {
     box-shadow: 0px 4px 4px #00000040;
     /* serve para colocar sombra na caixa aqui */
     margin: 0px 0px 0px 30px;
+    display: flex;
+    
+}
+
+.primeiraCaixa .fotoEspecie {
+    width: 450px;
+    margin-right: -80px;
+    margin-left: 40px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+
+}
+
+.primeiraCaixa p {
+    font-family: "Montserrat";
 }
 
 .segundaCaixa {
@@ -112,6 +165,9 @@ body {
     margin: 0px 0px 0px 30px;
 }
 
+.segundaCaixa .fotoVerbena {
+    width: 250px;
+}
 
 .terceiraCaixa {
     width: 550px;
@@ -120,6 +176,10 @@ body {
     box-shadow: 0px 4px 4px #00000040;
     /* serve para colocar sombra na caixa aqui */
     margin: 0px 0px 0px 30px;
+}
+
+.terceiraCaixa .fotoAnel {
+    width: 200px;
 }
 
 .quartaCaixa {
