--- a/pagina1/style.css
+++ b/pagina1/style.css
@@ -104,12 +104,12 @@ body {
 
 .descricaoEspecie {
     text-align: center;
-    margin-top: 20px;
+    margin-top: 39px;
 }
 .unicaSessao h1 {
     font-family: 'BonaNova';
     color: white;
-    margin-left: 30px;
+    margin-left: 104px;
     margin-bottom: 0px;
     font-style: normal;
     font-weight: 400;
@@ -121,7 +121,7 @@ body {
 .unicaSessao h3 {
     font-family: 'BonaNova';
     color: white;
-    margin-left: 35px;
+    margin-left: 109px;
     margin-top: 0px;
     margin-bottom: 22px;
     padding: 0px;
@@ -138,8 +138,9 @@ body {
     background-color: #D2BBA0;
     box-shadow: 0px 4px 4px #00000040;
     /* serve para colocar sombra na caixa aqui */
-    margin: 0px 0px 0px 30px;
+    margin: 0px 0px 0px 109px;
     display: flex;
+    align-items: flex-start;
     
 }
 
@@ -162,11 +163,12 @@ body {
     background-color: #D2BBA0;
     box-shadow: 0px 4px 4px #00000040;
     /* serve para colocar sombra na caixa aqui */
-    margin: 0px 0px 0px 30px;
+    margin: 0px 0px 0px 109px;
 }
 
 .segundaCaixa .fotoVerbena {
     width: 250px;
+    margin-left: 32px;
 }
 
 .terceiraCaixa {
