--- a/pagina1/style.css
+++ b/pagina1/style.css
@@ -106,10 +106,19 @@ body {
     text-align: center;
     margin-top: 39px;
 }
+
+.descricao2 {
+    text-align: center;
+    margin-left: 25px;
+    margin-right: 25px;
+    margin-top: 77px;
+    font-family: 'Montserrat';
+}
+
 .unicaSessao h1 {
     font-family: 'BonaNova';
     color: white;
-    margin-left: 104px;
+    margin-left: 124px;
     margin-bottom: 0px;
     font-style: normal;
     font-weight: 400;
@@ -153,6 +162,11 @@ body {
 
 }
 
+.flexbox {
+    display: flex;
+    justi
+}
+
 .primeiraCaixa p {
     font-family: "Montserrat";
 }
@@ -163,21 +177,32 @@ body {
     background-color: #D2BBA0;
     box-shadow: 0px 4px 4px #00000040;
     /* serve para colocar sombra na caixa aqui */
-    margin: 0px 0px 0px 109px;
+    margin: 93px 0px 0px 109px;
+    display: inline-block;
+    /* inline block é o que faz a coluna ir para o lado */
+     
+}
+
+.conteudo {
+    display: flex;
+    align-items: center;
 }
 
 .segundaCaixa .fotoVerbena {
     width: 250px;
     margin-left: 32px;
+    margin-top: 25px;
 }
 
 .terceiraCaixa {
-    width: 550px;
-    height: 400px;
+    width: 465px;
+    height: 500px;
     background-color: #D2BBA0;
     box-shadow: 0px 4px 4px #00000040;
     /* serve para colocar sombra na caixa aqui */
-    margin: 0px 0px 0px 30px;
+    margin: 0px 0px 0px 30px;  
+    display: inline-block;
+     /* inline block é o que faz a coluna ir para o lado */
 }
 
 .terceiraCaixa .fotoAnel {
@@ -186,11 +211,13 @@ body {
 
 .quartaCaixa {
     width: 400px;
-    height: 600px;
+    height: 600px; 
     background-color: #D2BBA0;
     box-shadow: 0px 4px 4px #00000040;
     /* serve para colocar sombra na caixa aqui */
     margin: 0px 0px 0px 30px;
+    display: inline-block;
+   
 }
 
 
@@ -201,4 +228,5 @@ body {
     box-shadow: 0px 4px 4px #00000040;
     /* serve para colocar sombra na caixa aqui */
     margin: 0px 0px 0px 30px;
+    display: inline-block;
 }
