--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ body {
     color: white;
     text-decoration: none;
     font-size: 20px;
+    font-family: "Montserrat";
 }
 
 .header .container .navbar .login-link {
@@ -116,7 +117,7 @@ body {
     font-weight: 400;
     text-align: left;
     letter-spacing: 0.8px;
-    line-height: 25px;
+   
 }
 
 .ElenaDiario {
