coloquei hover nos valores, ajustei algumas margens e tentei alinhar a primeira sessão

--- a/slider.css
+++ b/slider.css
@@ -1,4 +1,4 @@
-.slider{
+/* .slider{
     margin: 0 auto;
     width: 100%;
     height: auto;
@@ -75,4 +75,4 @@
 
 #radio5:checked ~ .primeiro{
     margin-left: -100%;
-}
+} */
